# fhir-data-pipes

./: .dockerignore  .env  .gitignore  .pylintrc  .travis.yml  404.html  CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  ct.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  index.html  license-format.xml  openhim-compose.yaml  openmrs-compose.yaml  pom.xml  requirements-dev.txt  sink-compose.yml  sitemap.xml  travis.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
additional/: index.html
batch/: Dockerfile  pom.xml
bunsen/: README.md  pom.xml
common/: pom.xml
concepts/: index.html
contributing/: index.html
coverage/: pom.xml
doc/: .gitignore  Patient_US-Core.schema  Patient_no-extension.schema  README.md  atom-feed.md  cloudbuild_flowChart.drawio.xml  cloudbuild_flowchart.xml  debug-cloud-build-locally.md  developers.md  google-cloud-fhirstore.md  horizontal_scalability.md  mkdocs.yml  openhim.md  pom.xml  review_process.md  run-cloud-build-locally.md  schema.md
docker/: .env  Dockerfile  Dockerfile_openmrs_extended  compose-controller-spark-sql-external-storage.yaml  compose-controller-spark-sql-released.yaml  compose-controller-spark-sql-single.yaml  compose-controller-spark-sql.yaml  docker-compose.yaml  hapi-compose.yml  hive-site_example.xml  indicator-calc-compose.yaml  openhim-compose.yaml  openmrs-compose.yaml  pom.xml  sink-compose.yml  (+3 more)
pipelines/controller-cli/: README.md  main.py  pyproject.toml  requirements.txt
pipelines/controller-cli/src/: main.py
pipelines/controller-cli/tests/: test_main.py
(+2457 files in other folders)
